# solana-program-demo

./: Cargo.toml  Makefile  README
examples/: account.rs  greet.rs  hello.rs  pda.rs  transfer.rs
src/: entrypoint.rs  lib.rs
src/processor/: account.rs  greeting.rs  helloworld.rs  mod.rs  pda.rs  transfer.rs
src/state/: greeting.rs  instruction.rs  mod.rs
src/tool/: account_check.rs  account_create.rs  assets.rs  data.rs  mod.rs
